full upgrade gui